apps/hello-nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-nginx
  labels:
    name: hello-nginx
    managed-by: argocd
